--- a/Index.html
+++ b/Index.html
@@ -9,61 +9,111 @@
 </head>
 
 <body>
-    <h1>Book Store</h1>
-    <ul>
+    <!-- start header -->
+    <header>
+        <h1>Book Store</h1>
+        <nav>
+            <ul>
 
-        <li><a href="Exercice.html">Home</a></li>
-        <li><a href="About.html" target="_blank">About</a></li>
-        <li><a href="Blog.html" target="_blank">Blog</a></li>
-        <li><a href="Contact us.html" target="_blank">Contact us</a></li>
+                <li><a href="Exercice.html">Home</a></li>
+                <li><a href="About.html" target="_blank">About</a></li>
+                <li><a href="Blog.html" target="_blank">Blog</a></li>
+                <li><a href="Contact us.html" target="_blank">Contact us</a></li>
 
-    </ul>
-    <input id="searchbar" type="text" name="search" placeholder="Search here">
-    <h2>Get your it book now</h2>
-    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at doloremque ullam beatae dolorum eligendi
-        architecto soluta deleniti amet rerum.</P>
-    <input type="button" value="Read more">
-    <img src="Images/700x300.png" alt="image1" width="700" height="300">
-    <h2>Explore our categories</h2>
-    <img<img src="Images/700x300.png" alt="image1" width="700" height="300">
-        <p>Catégorie</p>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300">
-        <p>Catégorie</p>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300">
-        <p>Catégorie</p>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300">
-        <p>Catégorie</p>
-        <h2>Child book</h2>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 1</b> <br><br>
-        <del>100dh</del> 87dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 2</b> <br><br>
-        <del>100dh</del> 87dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 3</b> <br><br>
-        <del>100dh</del> 87dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 4</b> <br><br>
-        <del>100dh</del> 87dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 5</b> <br><br>
-        <del>120dh</del> 100dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 6</b> <br><br>
-        <del>120dh</del> 100dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 7</b> <br><br>
-        <del>120dh</del> 100dh <br><br>
-        <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br><br>
-        <b>Book 8</b> <br><br>
-        <del>120dh</del> 100dh <br><br>
+            </ul>
+        </nav>
+        <form>
+            <input type="search" placeholder="Search here">
+        </form>
+    </header>
+    <!-- end header -->
+
+    <!-- Start main -->
+    <main>
+        <section>
+            <h2>Get your it book now</h2>
+            <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at doloremque ullam beatae dolorum
+                eligendi
+                architecto soluta deleniti amet rerum.</P>
+            <button>Read more</button>
+            <img src="Images/700x300.png" alt="image1" width="700" height="300">
+        </section>
+        <!-- Start categories -->
+        <section>
+            <h2>Explore our categories</h2>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                    <h3>Catégorie</h3>
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                    <h3>Catégorie</h3>
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                    <h3>Catégorie</h3>
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                    <h3>Catégorie</h3>
+            </div>
+        </section>
+        <!-- End categories -->
+        <!-- Start child book -->
+        <section>
+            <h2>Child book</h2>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 1</h3> 
+                <del>100dh</del> 87dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 2</h3> 
+                <del>100dh</del> 87dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 3</h3> 
+                <del>100dh</del> 87dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 4</h3> 
+                <del>100dh</del> 87dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 5</h3> 
+                <del>120dh</del> 100dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 6</h3> 
+                <del>120dh</del> 100dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 7</h3> 
+                <del>120dh</del> 100dh 
+            </div>
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 8</h3> 
+                <del>120dh</del> 100dh 
+            </div>
+        </section>
+        <!-- End child book -->
+    </main>
+    <footer>
         <H2>Our Newsletter</H2>
         <input id="searchbar" type="text" name="Your email" placeholder="Your email">
         <input type="button" value="Subscribe">
         <h3>Book store</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil aliquam, dolores maxime laboriosam
-            doloremque iste voluptates quaerat velit quis commodi quasi distinctio repellat odio sunt beatae natus
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil aliquam, dolores maxime
+            laboriosam
+            doloremque iste voluptates quaerat velit quis commodi quasi distinctio repellat odio sunt beatae
+            natus
             accusamus rem.</p>
         <h4>Links</h4>
         <ul>
@@ -78,7 +128,8 @@
         <a href="Tél:0600000">tél:0600000</a> <br>
         <a href="Mailto:book@gmail.com">Email:book@gmail.com</a>
         <address>Eje 5 Nte 990, Santa Barbara, Azcapotzalco, 02230 Ciudad de mexico, CDMX, Mexico</address>
-        &copy; Copyright 2023
+        <p>&copy; Copyright 2023</p>
+    </footer>
 </body>
 
 </html>
