--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>BOOK STORE</title>
 </head>
 
 <body>
@@ -14,12 +14,10 @@
         <h1>Book Store</h1>
         <nav>
             <ul>
-
                 <li><a href="Exercice.html">Home</a></li>
                 <li><a href="About.html" target="_blank">About</a></li>
                 <li><a href="Blog.html" target="_blank">Blog</a></li>
-                <li><a href="Contact us.html" target="_blank">Contact us</a></li>
-
+                <li><a href="Contact_us.html" target="_blank">Contact us</a></li>
             </ul>
         </nav>
         <form>
@@ -31,7 +29,7 @@
     <!-- Start main -->
     <main>
         <section>
-            <h2>Get your it book now</h2>
+            <h2>Get your book now</h2>
             <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi at doloremque ullam beatae dolorum
                 eligendi
                 architecto soluta deleniti amet rerum.</P>
@@ -41,95 +39,157 @@
         <!-- Start categories -->
         <section>
             <h2>Explore our categories</h2>
+
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                    <h3>Catégorie</h3>
+                <h3>Catégorie</h3>
             </div>
+
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                    <h3>Catégorie</h3>
+                <h3>Catégorie</h3>
             </div>
+
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                    <h3>Catégorie</h3>
+                <h3>Catégorie</h3>
             </div>
+
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                    <h3>Catégorie</h3>
+                <h3>Catégorie</h3>
             </div>
+
         </section>
         <!-- End categories -->
+
         <!-- Start child book -->
         <section>
             <h2>Child book</h2>
+
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 1</h3> 
-                <del>100dh</del> 87dh 
+                <h3>Book 1</h3>
+                <h4>
+                    <del>100dh</del>
+                    87dh
+                </h4>
+            </div>
+
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 2</h3>
+                <h4>
+                    <del>100dh</del>
+                    87dh
+                </h4>
+            </div>
+
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 3</h3>
+                <h4>
+                    <del>100dh</del>
+                    87dh
+                </h4>
+            </div>
+
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 4</h3>
+                <h4>
+                    <del>100dh</del>
+                    87dh
+                </h4>
+            </div>
+
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 5</h3>
+                <del>120dh</del> 100dh
             </div>
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 2</h3> 
-                <del>100dh</del> 87dh 
+                <h3>Book 6</h3>
+                <h4>
+                    <del>120dh</del>
+                    100dh
+                </h4>
+            </div>
+
+            <div>
+                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
+                <h3>Book 7</h3>
+                <h4>
+                    <del>120dh</del>
+                    100dh
+                </h4>
             </div>
             <div>
                 <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 3</h3> 
-                <del>100dh</del> 87dh 
-            </div>
-            <div>
-                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 4</h3> 
-                <del>100dh</del> 87dh 
-            </div>
-            <div>
-                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 5</h3> 
-                <del>120dh</del> 100dh 
-            </div>
-            <div>
-                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 6</h3> 
-                <del>120dh</del> 100dh 
-            </div>
-            <div>
-                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 7</h3> 
-                <del>120dh</del> 100dh 
-            </div>
-            <div>
-                <img src="Images/700x300.png" alt="image1" width="700" height="300"> <br>
-                <h3>Book 8</h3> 
-                <del>120dh</del> 100dh 
+                <h3>Book 8</h3>
+                <h4>
+                    <del>120dh</del>
+                    100dh
+                </h4>
             </div>
         </section>
         <!-- End child book -->
     </main>
+    <!-- End main -->
+
+    <!-- Start footer -->
     <footer>
-        <H2>Our Newsletter</H2>
-        <input id="searchbar" type="text" name="Your email" placeholder="Your email">
-        <input type="button" value="Subscribe">
-        <h3>Book store</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil aliquam, dolores maxime
-            laboriosam
-            doloremque iste voluptates quaerat velit quis commodi quasi distinctio repellat odio sunt beatae
-            natus
-            accusamus rem.</p>
-        <h4>Links</h4>
-        <ul>
-            <li><a href="Politique de confidentialité.html">Politique de confidentialité</a></li>
-            <li><a href="Condition de vente">Condition de vente</a></li>
-            <li><a href="Partners">Partners</a></li>
-        </ul>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3760.88658193205!2d-99.17940058485827!3d19.503514836844033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f80d60c43095%3A0xa3b84c113c8a2a38!2sTecnoParque!5e0!3m2!1sfr!2sma!4v1681062337812!5m2!1sfr!2sma"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe><br>
-        <a href="Tél:0600000">tél:0600000</a> <br>
-        <a href="Mailto:book@gmail.com">Email:book@gmail.com</a>
-        <address>Eje 5 Nte 990, Santa Barbara, Azcapotzalco, 02230 Ciudad de mexico, CDMX, Mexico</address>
-        <p>&copy; Copyright 2023</p>
+        <!-- Start newsletter -->
+        <div>
+            <H2>Our Newsletter</H2>
+            <form>
+                <input type="email" placeholder="Your email">
+                <button>Subscribe</button>
+            </form>
+        </div>
+        <!-- End newsletter -->
+
+        <!-- Start description -->
+        <div>
+            <h3>Book store</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, nihil aliquam, dolores maxime
+                laboriosam
+                doloremque iste voluptates quaerat velit quis commodi quasi distinctio repellat odio sunt beatae
+                natus
+                accusamus rem.</p>
+        </div>
+        <!-- End description -->
+
+        <!-- Start links -->
+        <div>
+            <h4>Links</h4>
+            <ul>
+                <li><a href="Politique_de_confidentialité.html">Politique_de_confidentialité</a></li>
+                <li><a href="Condition_de_vente">Condition_de_vente</a></li>
+                <li><a href="Partners">Partners</a></li>
+            </ul>
+        </div>
+        <!-- End links -->
+        <!-- Start Contact -->
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3760.88658193205!2d-99.17940058485827!3d19.503514836844033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f80d60c43095%3A0xa3b84c113c8a2a38!2sTecnoParque!5e0!3m2!1sfr!2sma!4v1681062337812!5m2!1sfr!2sma"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe><br>
+        </div>
+        <div>
+            <div>
+                <a href="Tél:0600000">tél:0600000</a>
+            </div>
+            <div>
+                <a href="Mailto:book@gmail.com">Email:book@gmail.com</a>
+            </div>
+            <address>Eje 5 Nte 990, Santa Barbara, Azcapotzalco, 02230 Ciudad de mexico, CDMX, Mexico</address>
+            <p>
+                &copy; Copyright 2023
+            </p>
+        </div>
     </footer>
 </body>
-
 </html>
