--- a/green office.html
+++ b/green office.html
@@ -17,16 +17,16 @@
         <div>
             <table>
                 <tr>
-                <th cellpading="20">
-                    <a href="">Location</a>
-                </th>
-                <th cellpading="20">
-                    <a href="">About us</a>
-                </th>
-                <th cellpading="20">
-                    <a href="">Contact</a>
-                </th>
-            </tr>
+                    <th cellpading="20">
+                        <a href="">Location</a>
+                    </th>
+                    <th cellpading="20">
+                        <a href="">About us</a>
+                    </th>
+                    <th cellpading="20">
+                        <a href="">Contact</a>
+                    </th>
+                </tr>
             </table>
         </div>
     </header>
@@ -42,22 +42,29 @@
             <img src="Images/who.jpg" alt="who" width="200" height="100" align="left">
         </div>
         <div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, cum blanditiis! Dolor debitis iusto
-                distinctio ducimus minima obcaecati dignissimos. Quod facere sequi harum culpa esse ipsa, a nemo
-                laudantium accusamus iusto quaerat reprehenderit ut eius dignissimos impedit, repellendus consectetur
-                tempora veritatis. Expedita iste similique reprehenderit. Praesentium distinctio, impedit at, optio
-                natus eius autem voluptas beatae quibusdam non vero adipisci facere recusandae incidunt? Hic est iste
-                natus consectetur magni rerum laudantium deserunt? Odit non incidunt voluptatibus quae hic enim quaerat
-                rem cum quasi, perspiciatis, ipsam minima repellendus consequuntur. Ad pariatur, ipsum maiores rem
-                deserunt eveniet quidem. Hic porro laborum ea placeat facilis animi veniam, ratione mollitia cum labore
-                ut minus, officiis quia sint deserunt expedita dolore architecto perspiciatis eaque officia, repellendus
-                quo cupiditate adipisci dolorem. Nemo dignissimos, aliquam, laborum pariatur iure exercitationem quis
-                doloribus vitae sunt sapiente odio? Saepe, quod iure recusandae repellendus eaque eveniet? Quidem
-                accusantium facilis earum, consequatur eligendi iusto! Reprehenderit libero placeat perspiciatis
-                dignissimos deleniti enim corporis atque voluptas at beatae, iure expedita suscipit tempore iusto
-                incidunt. Consequatur est quo veniam ratione nemo culpa error dignissimos, nisi reprehenderit saepe
-                animi laborum omnis, amet voluptates optio! In, delectus fugiat consectetur, ea, laboriosam sunt optio
-                dignissimos eos beatae aspernatur perferendis!
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat rem, in aperiam inventore facere
+                facilis architecto maxime ratione veniam unde! Cupiditate reiciendis assumenda, saepe ut dicta aliquid
+                inventore consequatur, nisi laboriosam quam temporibus earum magnam voluptatibus aliquam facilis
+                corporis magni itaque cum ducimus. Praesentium incidunt quae ipsum ipsa, assumenda, perferendis minima
+                earum sunt nemo sit id a ad quos dolorum rerum, fugiat blanditiis commodi exercitationem cumque! Quis
+                magnam dicta expedita vero aperiam similique non beatae dolorem nihil amet. Cupiditate laboriosam
+                facilis natus corporis soluta voluptates nobis beatae alias officiis pariatur. Ut cumque possimus
+                suscipit ducimus, molestiae a provident odio debitis, nemo explicabo facilis et dolor adipisci. Aperiam
+                quidem libero et a? Quos, voluptas deleniti assumenda atque exercitationem ipsam, esse numquam
+                laudantium repellat consectetur, deserunt possimus officiis quisquam minus nostrum doloribus? Eaque a
+                aspernatur pariatur voluptatem consectetur placeat laudantium aperiam sequi explicabo facilis molestiae,
+                delectus, hic, ea earum magnam tempore qui rem incidunt natus ratione. Reiciendis perferendis voluptas
+                asperiores nobis odio officia ullam repellendus error minima, architecto sit labore velit cupiditate
+                rerum esse earum incidunt dolorum praesentium rem a ipsam! Nisi ad repudiandae repellendus blanditiis
+                ipsam in nulla iure, accusantium animi! Facilis fugiat qui omnis! Nemo recusandae facilis provident
+                pariatur iusto sed ex molestias, veniam, excepturi, illum dolorum modi velit cum repudiandae beatae
+                error maiores aliquam itaque quam distinctio eaque reiciendis dolorem! Nihil quasi exercitationem
+                recusandae nam, ipsa cum fuga, provident dignissimos ea odit maxime perspiciatis at, reprehenderit
+                nesciunt consequuntur. Reprehenderit officiis sit quas provident nesciunt quo optio unde saepe. Vel,
+                quis eum at illo numquam ipsam doloremque magnam quae cupiditate itaque dicta, deleniti quas! Eum,
+                impedit fugiat. Repellat delectus est culpa vero sapiente eos voluptate. Expedita labore facilis
+                consequuntur voluptas et accusamus ad in, optio dicta enim non doloremque quo consectetur? Ipsam rerum
+                id quos sapiente, ab ex sunt.
             </p>
         </div>
         <div>
@@ -97,12 +104,24 @@
         </div>
         <div>
             <ul>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
-                <li><p>Lorem ipsum dolor sit amet.</p></li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
+                <li>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </li>
             </ul>
         </div>
         <div>
